// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders correctly 1`] = `
<DocumentFragment>
  <form
    class="sc-gKXOVf eUHymF"
  >
    <h1
      class="sc-eCYdqJ fAZKGE"
    >
      An animal cell contains
    </h1>
    <div
      class="sc-iBkjds"
    >
      <div
        class="sc-hKMtZM fRXuCA"
      >
        <div
          class="sc-bczRLJ fNFKHi"
        >
          <label
            class="sc-dkzDqf hdgGtK"
          >
            <input
              checked=""
              class="sc-gsnTZi exMZOs"
              id="option-0-0"
              name="option-0"
              type="radio"
            />
            Cell wall
          </label>
        </div>
        <div
          class="sc-bczRLJ jNqizO"
        >
          <label
            class="sc-dkzDqf hdgGtK"
          >
            <input
              class="sc-gsnTZi exMZOs"
              id="option-0-1"
              name="option-0"
              type="radio"
            />
            Ribosomes
          </label>
        </div>
      </div>
    </div>
    <div
      class="sc-iBkjds"
    >
      <div
        class="sc-hKMtZM fRXuCA"
      >
        <div
          class="sc-bczRLJ fNFKHi"
        >
          <label
            class="sc-dkzDqf hdgGtK"
          >
            <input
              checked=""
              class="sc-gsnTZi exMZOs"
              id="option-1-0"
              name="option-1"
              type="radio"
            />
            Cytoplasm
          </label>
        </div>
        <div
          class="sc-bczRLJ jNqizO"
        >
          <label
            class="sc-dkzDqf hdgGtK"
          >
            <input
              class="sc-gsnTZi exMZOs"
              id="option-1-1"
              name="option-1"
              type="radio"
            />
            Chloroplast
          </label>
        </div>
      </div>
    </div>
    <div
      class="sc-iBkjds"
    >
      <div
        class="sc-hKMtZM fRXuCA"
      >
        <div
          class="sc-bczRLJ fNFKHi"
        >
          <label
            class="sc-dkzDqf hdgGtK"
          >
            <input
              checked=""
              class="sc-gsnTZi exMZOs"
              id="option-2-0"
              name="option-2"
              type="radio"
            />
            Partially permeable membrane
          </label>
        </div>
        <div
          class="sc-bczRLJ jNqizO"
        >
          <label
            class="sc-dkzDqf hdgGtK"
          >
            <input
              class="sc-gsnTZi exMZOs"
              id="option-2-1"
              name="option-2"
              type="radio"
            />
            Impermeable membrane
          </label>
        </div>
      </div>
    </div>
    <div
      class="sc-iBkjds"
    >
      <div
        class="sc-hKMtZM fRXuCA"
      >
        <div
          class="sc-bczRLJ fNFKHi"
        >
          <label
            class="sc-dkzDqf hdgGtK"
          >
            <input
              checked=""
              class="sc-gsnTZi exMZOs"
              id="option-3-0"
              name="option-3"
              type="radio"
            />
            Cellulose
          </label>
        </div>
        <div
          class="sc-bczRLJ jNqizO"
        >
          <label
            class="sc-dkzDqf hdgGtK"
          >
            <input
              class="sc-gsnTZi exMZOs"
              id="option-3-1"
              name="option-3"
              type="radio"
            />
            Mitochondria
          </label>
        </div>
      </div>
    </div>
    <div
      class="sc-iBkjds"
    >
      <div
        class="sc-hKMtZM efHAkz"
      >
        <div
          class="sc-bczRLJ bDYwXX"
        >
          <label
            class="sc-dkzDqf hdgGtK"
          >
            <input
              checked=""
              class="sc-gsnTZi exMZOs"
              id="option-4-0"
              name="option-4"
              type="radio"
            />
            Cellulose
          </label>
        </div>
        <div
          class="sc-bczRLJ hXUtLi"
        >
          <label
            class="sc-dkzDqf hdgGtK"
          >
            <input
              class="sc-gsnTZi exMZOs"
              id="option-4-1"
              name="option-4"
              type="radio"
            />
            Ribosomes
          </label>
        </div>
        <div
          class="sc-bczRLJ hXUtLi"
        >
          <label
            class="sc-dkzDqf hdgGtK"
          >
            <input
              class="sc-gsnTZi exMZOs"
              id="option-4-2"
              name="option-4"
              type="radio"
            />
            Mitochondria
          </label>
        </div>
        <div
          class="sc-bczRLJ iGNBNP"
        >
          <label
            class="sc-dkzDqf hdgGtK"
          >
            <input
              class="sc-gsnTZi exMZOs"
              id="option-4-3"
              name="option-4"
              type="radio"
            />
            Chroloplast
          </label>
        </div>
      </div>
    </div>
  </form>
  <h2
    class="sc-jSMfEi kTCAsy"
  >
    The answer is incorrect
  </h2>
</DocumentFragment>
`;

exports[`Form renders correctly when answer is reached 1`] = `
<DocumentFragment>
  <form
    class="sc-gKXOVf eUHymF"
  >
    <h1
      class="sc-eCYdqJ fAZKGE"
    >
      An animal cell contains
    </h1>
    <div
      class="sc-iBkjds"
    >
      <div
        class="sc-hKMtZM fRXuCA"
      >
        <div
          class="sc-bczRLJ fNFKHi"
        >
          <label
            class="sc-dkzDqf eThtLg"
          >
            <input
              checked=""
              class="sc-gsnTZi exMZOs"
              disabled=""
              id="option-0-0"
              name="option-0"
              type="radio"
            />
            Cell wall
          </label>
        </div>
        <div
          class="sc-bczRLJ jNqizO"
        >
          <label
            class="sc-dkzDqf eThtLg"
          >
            <input
              class="sc-gsnTZi exMZOs"
              disabled=""
              id="option-0-1"
              name="option-0"
              type="radio"
            />
            Ribosomes
          </label>
        </div>
      </div>
    </div>
    <div
      class="sc-iBkjds"
    >
      <div
        class="sc-hKMtZM fRXuCA"
      >
        <div
          class="sc-bczRLJ fNFKHi"
        >
          <label
            class="sc-dkzDqf eThtLg"
          >
            <input
              checked=""
              class="sc-gsnTZi exMZOs"
              disabled=""
              id="option-1-0"
              name="option-1"
              type="radio"
            />
            Cytoplasm
          </label>
        </div>
        <div
          class="sc-bczRLJ jNqizO"
        >
          <label
            class="sc-dkzDqf eThtLg"
          >
            <input
              class="sc-gsnTZi exMZOs"
              disabled=""
              id="option-1-1"
              name="option-1"
              type="radio"
            />
            Chloroplast
          </label>
        </div>
      </div>
    </div>
    <div
      class="sc-iBkjds"
    >
      <div
        class="sc-hKMtZM fRXuCA"
      >
        <div
          class="sc-bczRLJ fNFKHi"
        >
          <label
            class="sc-dkzDqf eThtLg"
          >
            <input
              checked=""
              class="sc-gsnTZi exMZOs"
              disabled=""
              id="option-2-0"
              name="option-2"
              type="radio"
            />
            Partially permeable membrane
          </label>
        </div>
        <div
          class="sc-bczRLJ jNqizO"
        >
          <label
            class="sc-dkzDqf eThtLg"
          >
            <input
              class="sc-gsnTZi exMZOs"
              disabled=""
              id="option-2-1"
              name="option-2"
              type="radio"
            />
            Impermeable membrane
          </label>
        </div>
      </div>
    </div>
    <div
      class="sc-iBkjds"
    >
      <div
        class="sc-hKMtZM fRXuCA"
      >
        <div
          class="sc-bczRLJ fNFKHi"
        >
          <label
            class="sc-dkzDqf eThtLg"
          >
            <input
              checked=""
              class="sc-gsnTZi exMZOs"
              disabled=""
              id="option-3-0"
              name="option-3"
              type="radio"
            />
            Cellulose
          </label>
        </div>
        <div
          class="sc-bczRLJ jNqizO"
        >
          <label
            class="sc-dkzDqf eThtLg"
          >
            <input
              class="sc-gsnTZi exMZOs"
              disabled=""
              id="option-3-1"
              name="option-3"
              type="radio"
            />
            Mitochondria
          </label>
        </div>
      </div>
    </div>
    <div
      class="sc-iBkjds"
    >
      <div
        class="sc-hKMtZM efHAkz"
      >
        <div
          class="sc-bczRLJ bDYwXX"
        >
          <label
            class="sc-dkzDqf eThtLg"
          >
            <input
              checked=""
              class="sc-gsnTZi exMZOs"
              disabled=""
              id="option-4-0"
              name="option-4"
              type="radio"
            />
            Cellulose
          </label>
        </div>
        <div
          class="sc-bczRLJ hXUtLi"
        >
          <label
            class="sc-dkzDqf eThtLg"
          >
            <input
              class="sc-gsnTZi exMZOs"
              disabled=""
              id="option-4-1"
              name="option-4"
              type="radio"
            />
            Ribosomes
          </label>
        </div>
        <div
          class="sc-bczRLJ hXUtLi"
        >
          <label
            class="sc-dkzDqf eThtLg"
          >
            <input
              class="sc-gsnTZi exMZOs"
              disabled=""
              id="option-4-2"
              name="option-4"
              type="radio"
            />
            Mitochondria
          </label>
        </div>
        <div
          class="sc-bczRLJ iGNBNP"
        >
          <label
            class="sc-dkzDqf eThtLg"
          >
            <input
              class="sc-gsnTZi exMZOs"
              disabled=""
              id="option-4-3"
              name="option-4"
              type="radio"
            />
            Chroloplast
          </label>
        </div>
      </div>
    </div>
  </form>
  <h2
    class="sc-jSMfEi kTCAsy"
  >
    The answer is correct
  </h2>
</DocumentFragment>
`;
